--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "buster-server-cli",
-  "version": "0.1.0",
-  "description": "buster-server CLI library",
-  "homepage": "http://busterjs.org/docs/buster-server-cli",
-  "author": {
-    "name": "August Lilleaas and Christian Johansen"
-  },
-  "contributors": [
-    {
-      "name": "August Lilleaas",
-      "email": "august.lilleaas@gmail.com",
-      "url": "http://augustl.com"
+    "name": "buster-server-cli",
+    "version": "0.1.0",
+    "description": "buster-server CLI library",
+    "homepage": "http://busterjs.org/docs/buster-server-cli",
+    "author": { "name": "August Lilleaas and Christian Johansen" },
+    "contributors": [{
+        "name": "August Lilleaas",
+        "email": "august.lilleaas@gmail.com",
+        "url": "http://augustl.com"
+    }, {
+        "name": "Christian Johansen",
+        "email": "christian@cjohansen.no",
+        "url": "http://cjohansen.no"
+    }],
+    "main": "./lib/server-cli",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/busterjs/buster-server-cli.git"
     },
-    {
-      "name": "Christian Johansen",
-      "email": "christian@cjohansen.no",
-      "url": "http://cjohansen.no"
+    "dependencies": {
+        "buster-core": ">=0.6.2",
+        "buster-cli": ">=0.5.0",
+        "buster-capture-server": ">=0.5.0",
+        "buster-user-agent-parser": ">=0.3.1",
+        "ramp-resources": ">=0.4",
+        "paperboy": "~0",
+        "ejs": "~0.4",
+        "phantom": "~0.3.5"
+    },
+    "devDependencies": {
+        "buster": "*"
     }
-  ],
-  "main": "./lib/server-cli",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/busterjs/buster-server-cli.git"
-  },
-  "dependencies": {
-    "buster-core": ">=0.6.2",
-    "buster-cli": ">=0.5.0",
-    "buster-capture-server": ">=0.5.0",
-    "buster-user-agent-parser": ">=0.3.1",
-    "ramp-resources": ">=0.4",
-    "paperboy": "~0",
-    "ejs": "~0.4",
-    "phantom": "~0.3.5"
-  },
-  "devDependencies": {
-    "buster": "*"
-  }
 }
