--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
         "url": "https://github.com/busterjs/buster-server-cli.git"
     },
     "dependencies": {
-        "buster-core": ">=0.6.2",
-        "buster-cli": ">=0.5.0",
-        "buster-capture-server": ">=0.5.0",
-        "buster-user-agent-parser": ">=0.3.1",
-        "ramp-resources": ">=0.4",
+        "buster-cli": ">=0.6.0",
+        "buster-capture-server": ">=0.6.0",
+        "ramp-resources": ">=0.5",
         "paperboy": "~0",
-        "ejs": "~0.4"
+        "ejs": "~0.4",
+        "platform": "~1.0"
     },
     "devDependencies": {
-        "buster": "*"
+        "buster-node": "*",
+        "bane": "~0.1"
     }
 }
