Fix remaining failing tests
  - And add run-tests.js script

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "type": "git",
         "url": "https://github.com/busterjs/buster-server-cli.git"
     },
+    "scripts": {
+        "test": "node run-tests.js"
+    },
     "dependencies": {
         "buster-cli": ">=0.6.0",
         "buster-capture-server": ">=0.6.0",
