--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
     "name": "buster-server-cli",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "buster-server CLI library",
     "homepage": "http://busterjs.org/docs/buster-server-cli",
-    "author": { "name": "August Lilleaas and Christian Johansen" },
+    "author": {
+        "name": "Christian Johansen",
+        "email": "christian@cjohansen.no",
+        "url": "http://cjohansen.no"
+    },
     "contributors": [{
         "name": "August Lilleaas",
         "email": "august.lilleaas@gmail.com",
         "url": "http://augustl.com"
-    }, {
-        "name": "Christian Johansen",
-        "email": "christian@cjohansen.no",
-        "url": "http://cjohansen.no"
     }],
     "main": "./lib/server-cli",
     "repository": {
