Add platform as dependency

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "ramp-resources": ">=0.4",
         "paperboy": "~0",
         "ejs": "~0.4",
-        "phantom": "~0.3.5"
+        "phantom": "~0.3.5",
+        "platform": "~1.0.0"
     },
     "devDependencies": {
         "buster": "*"
