referee and bane to devDependencies added

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "phantom-proxy": "~0.1.78"
     },
     "devDependencies": {
-        "buster-node": "*"
+        "buster-node": "*",
+        "referee": "*",
+        "bane": "~1.0"
     }
 }
