--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "url": "https://github.com/busterjs/buster-server-cli.git"
     },
     "scripts": {
-        "test": "node run-tests.js"
+        "test": "node run-tests.js",
+        "test-debug": "node --debug-brk run-tests.js"
     },
     "dependencies": {
         "buster-cli": "~0.6",
