Add license to package.json
https://npm1k.org - are we licensed yet?

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "email": "christian@cjohansen.no",
         "url": "http://cjohansen.no"
     }],
+    "license": "BSD-3-Clause",
     "main": "./lib/server-cli",
     "repository": {
         "type": "git",
