--- a/package.json
+++ b/package.json
@@ -24,17 +24,16 @@
         "test-debug": "node --debug-brk run-tests.js"
     },
     "dependencies": {
-        "buster-cli": "~0.6",
-        "ramp": "~1.0",
-        "platform": "~1.2",
-        "ramp-resources": "~1.0",
-        "paperboy": "~0",
-        "ejs": "~0.4",
-        "phantom-proxy": "~0.1.78"
+        "buster-cli": "0.7.x",
+        "ramp": "2.x",
+        "platform": "1.x",
+        "ramp-resources": "2.x",
+        "paperboy": "0.0.5",
+        "ejs": "2.x",
+        "phantom-proxy": "0.1.x"
     },
     "devDependencies": {
-        "buster-node": "*",
-        "referee": "*",
-        "bane": "~1.0"
+        "buster-node": "0.7.x",
+        "bane": "1.x"
     }
 }
