--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "test": "node run-tests.js",
     "test-debug": "node --debug-brk run-tests.js"
   },
+  "engines": {
+    "node": ">= 4"
+  },
   "dependencies": {
     "buster-cli": "0.8.x",
     "ejs": "2.x",
